MDL-57110 behat: Enrol dialog should have relative position
On clean theme it is absolute position and on small
screen user can't scroll to enrol user

--- a/enrol/manual/yui/quickenrolment/assets/skins/sam/quickenrolment.css
+++ b/enrol/manual/yui/quickenrolment/assets/skins/sam/quickenrolment.css
@@ -46,6 +46,7 @@ Structure of the user enroller panel
 
 .user-enroller-panel .uep-wrap {
     height: inherit;
+    position: relative;
 }
 
 .user-enroller-panel .uep-search-results .user .count {
